- added functionality to change a label via javascript (UtilUI.changeLabel) - fixed css issue where text is not visible in deactivated components - cleaned up old functions, that are not used anymore

--- a/ingrid-portal-mdek-application/src/main/webapp/css/main.css
+++ b/ingrid-portal-mdek-application/src/main/webapp/css/main.css
@@ -9,6 +9,7 @@
 	-moz-box-sizing: border-box;    /* Firefox, other Gecko */
 	box-sizing: border-box;         /* Opera/IE 8+ */
 }
+.dj_webkit .dijitTextBoxDisabled INPUT { color: #818181; }
 
 div { margin:0; padding:0; }
 img { border:0; }
